WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58736
REGRESSION (
r84096
): <br> moved to the right in fast/block/float/032.html
https://bugs.webkit.org/show_bug.cgi?id=58736
Summary
REGRESSION (r84096): <br> moved to the right in fast/block/float/032.html
mitz
Reported
2011-04-16 17:17:38 PDT
After
r84096
, one of the <br> elements in fast/block/float/032.html is clearing a float that ends above it (so should not be cleared). This is a result of artificially extending the float so that its bottom touches the bottom of the line (the line is taller than the float, in this case). I am going to commit updated expected results for now.
Attachments
Patch
(6.16 KB, patch)
2011-04-16 19:25 PDT
,
mitz
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-04-16 17:21:08 PDT
r84098
.
mitz
Comment 2
2011-04-16 19:25:33 PDT
Created
attachment 89938
[details]
Patch
Maciej Stachowiak
Comment 3
2011-04-17 19:03:47 PDT
Comment on
attachment 89938
[details]
Patch r=me
mitz
Comment 4
2011-04-17 19:10:23 PDT
Committed
r84119
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug