REGRESSION (r84096): <br> moved to the right in fast/block/float/032.html https://bugs.webkit.org/show_bug.cgi?id=58736

Reviewed by Maciej Stachowiak.

Source/WebCore:

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::appendFloatingObjectToLastLine): It is enough to extend the float so
that it touches the bottom of the previous line, since RenderBlock::markLinesDirtyInBlockRange()
always dirties the line after the last one in the range.

LayoutTests:

Revert to the correct results.

* platform/chromium-win/fast/block/float/032-expected.txt:
* platform/gtk/fast/block/float/032-expected.txt:
* platform/mac/fast/block/float/032-expected.txt:
* platform/qt/fast/block/float/032-expected.txt:



Canonical link: https://commits.webkit.org/73860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84119 268f45cc-cd09-0410-ab3c-d52691b4dbfc